--- a/spider/package.json
+++ b/spider/package.json
@@ -6,6 +6,7 @@
     "async": "^2.1.5",
     "bluebird": "^3.5.0",
     "cheerio": "^0.22.0",
+    "commander": "^2.12.2",
     "fs-extra": "^2.0.0",
     "kue": "^0.11.5",
     "lodash": "^4.17.4",
