--- a/spider/package.json
+++ b/spider/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.0",
     "cheerio": "^0.22.0",
     "commander": "^2.12.2",
+    "debug": "^3.1.0",
     "fs-extra": "^2.0.0",
     "kue": "^0.11.5",
     "lodash": "^4.17.4",
