--- a/spider/package.json
+++ b/spider/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node url.js && node img.js"
   },
   "author": "",
   "license": "ISC",
