--- a/stack.linux.yaml
+++ b/stack.linux.yaml
@@ -42,6 +42,9 @@ services:
     command: python classify_nsfw.py
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == worker
     volumes:
       - /mnt/data:/mnt/data
 
