--- a/stack.linux.yaml
+++ b/stack.linux.yaml
@@ -44,7 +44,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == worker
+          - node.role != manager
     volumes:
       - /mnt/data:/mnt/data
 
