--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -65,5 +65,21 @@ services:
         constraints:
           - node.role == manager
 
+  portainer:
+    image: portainer/portainer
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+    command: ["-H", "unix:///var/run/docker.sock"]
+    ports:
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer-data:/data
+    networks:
+      - backend
+
 volumes:
   redis-data:
